<resources>
    <string name="app_name">Canicat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CANICAT</string>
    <string name="nav_header_subtitle">Grupo #4</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pets">Mascotas</string>
    <string name="menu_search_canicat">Buscar CaniCat</string>

    <string name="text_dont_have_account">¿No tiene cuenta?</string>
    <string name="text_register">Regístrese</string>
    <string name="text_already_have_account">¿Ya tiene cuenta?</string>
    <string name="text_login">Inicie sesión</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="title_activity_canicat_map">CanicatMapActivity</string>
    <string name="title_menu_edit">Editar</string>
    <string name="title_menu_save">Guardar</string>
    <string name="title_menu_delete">Eliminar</string>
    <string name="title_menu_medical_services">Vacunas</string>
    <string name="title_create">Nueva mascota</string>
    <string name="title_update">Editar mascota</string>

    <string name="text_pet_type">%1$s - %2$s</string>

    <string name="label_name">Nombre</string>
    <string name="label_species">Especie</string>
    <string name="label_breed">Raza</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_color">Color</string>

    <string name="get_pets_failed">Ocurrió un fallo al intentar obtener las mascotas :(</string>
    <string name="get_pets_error">Ocurrió un error al intentar obtener mascotas :(</string>
    <string name="pet_updated_successfull">Mascota actualizada exitosamente :D</string>
    <string name="pet_updated_failed">Ocurrió un fallo al intentar actualizar la mascota :(</string>
    <string name="pet_updated_error">Ocurrió un error al intentar actualizar la mascota :(</string>
    <string name="pet_created_successfull">La mascota se añadió exitosamente :D</string>
    <string name="pet_created_failed">Ocurrió un fallo al intentar añadir la mascota :(</string>
    <string name="pet_created_error">Ocurrió un error al intentar añadir la mascota :(</string>
    <string name="alert_complete_fields">Por favor, complete todos los campos correctamente</string>
    <string name="title_edit">Editar mascota</string>
    <string name="alert_delete_confirmation">¿Está seguro de eliminar a %1$s?</string>
    <string name="pet_deleted_succesfull">Mascota eliminada exitosamente :D</string>
    <string name="pet_deleted_error">Ocurrió un error al intentar eliminar la mascota</string>
    <string name="pet_deleted_failed">Ocurrió un fallo al intentar eliminar la mascota :(</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_yes">Sí</string>
    <string name="label_ok">Ok</string>
    <string name="logo_header_subtitle">Canicat App</string>
    <string name="label_firstname">Nombres</string>
    <string name="label_lastname">Apellidos</string>
    <string name="label_dni">Cédula</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_repeat_password">Repetir contraseña</string>
    <string name="label_login">Iniciar sesión</string>
    <string name="required_field">Campo requerido</string>
    <string name="invalid_email">Email inválido</string>
    <string name="only_numbers">La cédula solo debe contener números</string>
    <string name="password_min_length">La contraseña debe tener al menos 4 caracteres</string>
    <string name="password_must_be_equals">Las contraseñas no coinciden</string>
    <string name="dni_must_be_valid">La cédula debe ser válida</string>
    <string name="error_not_user_id">No se obtuvo el id del usuario creado</string>
    <string name="login_successfull">Inicio de sesión exitoso</string>
    <string name="login_error">Ocurrió un error al intentar iniciar sesión</string>
    <string name="login_failed">Ocurrió un fallo al intentar iniciar sesión</string>
    <string name="get_vaccines_error">Ocurrió un error al intentar obtener las vacunas :(</string>
    <string name="get_vaccines_fail">Error al intentar obtener las vacunas :(</string>
    <string name="save_vaccine_success">Vacuna guardada con exito</string>
    <string name="save_vaccine_error">Ha ocurrido un error, los datos no se han guardado</string>
    <string name="save_vaccine_fail">Error al guardas los datos</string>
    <string name="error_contact_it">Ha ocurrido un error. Favor, ponerse en contacto con el departamento de sistemas</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="pet_not_loaded">Disculpa, no se ha podido leer correctamente la mascota. Vuelve a intentarlo más tarde.</string>
    <string name="vaccine_deleted_error">Ocurrió un erro al intentar eliminar la vacuna :(</string>
    <string name="vaccine_deleted_successful">Vacuna eliminada correctamente</string>
    <string name="label_type">Tipo de vacuna</string>
    <string name="label_description">Descripción</string>
    <string name="title_edit_vaccine">Editar Vacuna</string>
    <string name="title_add_vaccine">Crear Vacuna</string>
    <string name="update_vaccine">Vacuna actualizada correctamente</string>
    <string name="update_error_vaccine">Ocurrió un error al intentar actualizar la vacuna :(</string>
    <string name="logout_successful">Sesión cerrada exitosamente</string>
    <string name="uid_key">UID</string>
    <string name="displayname_key">DISPLAYNAME</string>

</resources>